Code refactoring: using "List.of" and "Utils.runAndCheckException"